Initial work on using FreeImage

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,14 +21,14 @@ else(USE_CXX11)
 	set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g2 -Wall -Wextra")
 endif(USE_CXX11)
 
-# Find libgd
-find_library(LIBGD_LIBRARY gd)
-find_path(LIBGD_INCLUDE_DIR gd.h)
-message (STATUS "libgd library: ${LIBGD_LIBRARY}")
-message (STATUS "libgd headers: ${LIBGD_INCLUDE_DIR}")
-if(NOT LIBGD_LIBRARY OR NOT LIBGD_INCLUDE_DIR)
-	message(FATAL_ERROR "libgd not found!")
-endif(NOT LIBGD_LIBRARY OR NOT LIBGD_INCLUDE_DIR)
+# Find FreeImage
+find_library(FREEIMAGE_LIBRARY freeimage)
+find_path(FREEIMAGE_INCLUDE_DIR FreeImage.h)
+message (STATUS "FreeImage library: ${FREEIMAGE_LIBRARY}")
+message (STATUS "FreeImage headers: ${FREEIMAGE_INCLUDE_DIR}")
+if(NOT FREEIMAGE_LIBRARY OR NOT FREEIMAGE_INCLUDE_DIR)
+	message(FATAL_ERROR "FreeImage not found!")
+endif(NOT FREEIMAGE_LIBRARY OR NOT FREEIMAGE_INCLUDE_DIR)
 
 # Find zlib
 find_library(ZLIB_LIBRARY z)
@@ -96,7 +96,7 @@ include_directories(
 	"${CMAKE_CURRENT_SOURCE_DIR}"
 	"${CMAKE_CURRENT_BINARY_DIR}"
 	${SQLITE3_INCLUDE_DIR}
-	${LIBGD_INCLUDE_DIR}
+	${FREEIMAGE_INCLUDE_DIR}
 	${ZLIB_INCLUDE_DIR}
 )
 
@@ -133,7 +133,7 @@ target_link_libraries(
 	${SQLITE3_LIBRARY}
 	${LEVELDB_LIBRARY}
 	${REDIS_LIBRARY}
-	${LIBGD_LIBRARY}
+	${FREEIMAGE_LIBRARY}
 	${ZLIB_LIBRARY}
 )
 
